css/styles.css
/* ... */
.salutation__glass {
	display: block;
	animation: greeting-carousel 10s ease-in-out infinite;
}

.salutation__glass span {
	display: block;
}

.salutation__window .japanese {
	font-family:
		"Corporate-Logo-Rounded-Bold", "ヒラギノ角ゴ Pro W3",
		"Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, sans-serif;
}

.salutation__window .japanese span {
	display: none;
	font-family: inherit;
}

.salutation__window .japanese .time {
	display: block;
}

@keyframes greeting-carousel {
	0% {
		transform: translateY(0%);
	}

	24%,
	37% {
		transform: translateY(-22%);
	}

	54%,
	67% {
		transform: translateY(-50%);
	}

	84%,
	100% {
		transform: translateY(-75%);
	}
}

/* About */

.about .media {
	display: block;
}

.about * + p {
	margin-top: 0;
}

.rubiks-cube-container {
	width: fit-content;
	max-width: 10em;
	margin: 0 auto;
}

/* Projects */

.projects ul {
	margin: 0;
	padding: 0;
	list-style-type: none;
}

.projects__button {
	display: block;
	margin: 0;
	padding: 0;
	background-color: transparent;
	cursor: pointer;
	border: none;
}

.projects__card {
	position: relative;
	max-width: fit-content;
	margin: 3rem auto;
}

.projects__card:first-of-type {
	margin-top: 0;
}

.projects__card .projects__button .projects__button__title {
	display: block;
	position: absolute;
	bottom: 0;
	width: 100%;
	padding: 0.5em;
	background-color: hsl(from var(--navy-blue) h s l / 0.5);
	font-size: 1rem;
	font-family: "Electrolize", "Times New Roman", Times, serif;
	color: var(--white);
}

.projects__picture {
	aspect-ratio: 9 / 16;
	object-fit: contain;
	object-position: 0% 0%;
	width: auto;
	max-height: calc(100vh - (1.4 * 1rem) - var(--header-height));
	border-radius: 0.25rem;
}

.projects__picture--droste {
	aspect-ratio: 9 / 16;
	position: relative;
	width: auto;
	height: calc(100vh - (1.4 * 1rem) - var(--header-height));
	border: 5vw inset hsl(from var(--navy-blue) h calc(s + 15) calc(l - 10));
	border-radius: 0.25rem;
}

div:has(.droste-final-image) {
	display: flex;
	justify-content: center;
	align-items: center;
}

.droste-final-image {
	opacity: 0.75;
	width: 40%;
}

.disable-iframe-clicks {
	position: absolute;
	z-index: 1000;
	width: 100%;
	height: 100%;
}

.projects__desc {
	inset: 0.5em;
	scroll-snap-type: y proximity;
	overscroll-behavior: contain;
	max-width: 100vw;
	max-height: calc(100vh - 0.25em);
	background-color: var(--navy-blue);
	border: 0.5em solid hsl(from var(--dodgerblue) h s calc(l - 40));
	border-radius: 0.25rem;
	color: var(--white);
}

.projects__desc__hide {
	aspect-ratio: 1;
	position: absolute;
	top: 0;
	right: 0;
	width: 2rem;
	height: 2rem;
	padding: 0.5em;
	background-color: transparent;
	border: none;
}

.projects__desc__hide .bar {
	display: block;
	width: 100%;
	border-bottom: 0.25em solid var(--white);
}

.projects__desc__hide .bar--left {
	transform: scale(1.1) translateY(0.1em) rotate(45deg);
}

.projects__desc__hide .bar--right {
	transform: scale(1.1) translateY(-0.1em) rotate(-45deg);
}

.projects__desc .picture-container {
	scroll-snap-type: y mandatory;
	scroll-snap-align: end;
	display: flex;
	flex-direction: column;
	align-items: center;
	overflow-y: scroll;
	max-width: 100%;
	max-height: 80vh;
	margin: 0 auto;
}

.projects__desc picture {
	max-width: 95%;
}

.projects__desc .projects__picture {
	scroll-snap-align: start;
	width: 100%;
	height: auto;
	border-radius: 0.25rem;
}

.JMdev-desc picture:nth-of-type(10) {
	display: none;
}

.projects__desc .projects__picture:last-child {
	aspect-ratio: initial;
	scroll-snap-align: end;
}

.projects__desc .info {
	scroll-snap-align: start;
	display: flex;
	flex-direction: column;
	gap: 1em;
	transform: translateY(-2em);
	padding: 0.5rem;
	background-color: hsl(from var(--navy-blue) h s l / 0.5);
}

.projects__desc [class*="project-logo"] {
	aspect-ratio: 1;
	max-width: 3rem;
	max-height: 3rem;
	padding: 0.25rem;
	background-color: var(--white);
	background-image: radial-gradient(
		circle,
		hsl(from var(--white) h s calc(l - 5)) 0%,
		hsl(from var(--white) h s calc(l - 10)) 50%,
		var(--white) 100%
	);
	border: solid 0.125rem hsl(from var(--white) h s calc(l - 20));
	border-radius: 0.5rem;
}

.projects__desc hgroup {
	display: flex;
	align-items: center;
	gap: 0.25em;
}

.projects__desc h3 {
	font-size: 1.25em;
}

.projects__desc .info p {
	margin: 0 auto;
}

.projects__desc .links,
.other-projects__proj .links {
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 1em;
}

.projects__desc .links a,
.projects__desc .links button,
.other-projects__proj .links a {
	display: block;
	max-width: 3rem;
	max-height: 3rem;
	padding: 0.5rem;
	background-color: var(--dodgerblue);
	cursor: pointer;
	border: none;
	border-radius: 0.25rem;
}

.other-projects__proj .links a {
	max-width: 2rem;
	max-height: 2rem;
}

.projects__desc .links img,
.other-projects__proj .links img {
	min-width: 2rem;
	min-height: 2rem;
}

.links .nav__github {
	filter: brightness(0) saturate(100%) invert(4%) sepia(90%) saturate(2980%)
		hue-rotate(247deg) brightness(90%) contrast(95%);
}

/* Other Projects */

.other-projects ul {
	max-width: 100%;
}

.other-projects ul li {
	margin: 2rem 0;
}

.other-projects ul li:first-of-type {
	margin-top: 0;
}

[class*="other-project-logo"] {
	aspect-ratio: 1;
	max-width: 3.5rem;
	max-height: 3.5rem;
	padding: 0.25rem;
	background-color: var(--white);
	background-image: radial-gradient(
		circle,
		var(--white) 0%,
		hsl(from var(--white) h s calc(l - 10)) 50%,
		var(--white) 100%
	);
	border: solid 0.25rem hsl(from var(--white) h s calc(l - 20));
	border-radius: 0.25rem;
}

.other-projects__proj details > summary {
	width: 100%;
	cursor: pointer;
	list-style-type: none;
}

summary::-webkit-details-marker {
	display: none;
}

.other-projects__proj summary h4 {
	max-width: fit-content;
	font-size: 1.125rem;
}

.other-projects__proj details:not([open]) summary span {
	display: block;
	overflow: hidden;
	max-width: calc(90vw - 3.5rem);
	text-overflow: ellipsis;
	white-space: nowrap;
}
/* ... */

